[tool.poetry]
name = "zkteco"
version = "0.1.0"
description = "A Python application to connect to ZKTeco devices"
authors = []

[tool.poetry.dependencies]
python = "~3.8"
pyzkaccess = "1.1"
python-dotenv = "^1.0"
paho-mqtt = "^2.1"
schedule = "^1.2"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
jsonschema = "^4.17.3"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[build-system]
build-backend = "poetry.core.masonry.api"
